Fix required changes for container overflowing

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ html {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  width: 100vw;
   height: 100vh;
 }
 
